syntax = "proto3";
// Describes a chart generated from WebRTC event log data.
option optimize_for = LITE_RUNTIME;
package webrtc.analytics;

import "chart_enums.proto";

message DataSet {
  repeated float x_values = 1;
  repeated float y_values = 2;
  string label = 3;
  ChartStyle.Type style = 4;
  bool highlight_points = 5;
}

message CategoryMap {
  repeated float encodings = 1;
  repeated string categories = 2;
}

message Chart {
  repeated DataSet data_sets = 1;
  float xaxis_min = 2;
  float xaxis_max = 3;
  string xaxis_label = 4;
  float yaxis_min = 5;
  float yaxis_max = 6;
  string yaxis_label = 7;
  string title = 8;

  CategoryMap yaxis_categories = 9;
}

message ChartCollection {
  repeated Chart charts = 1;
}
